infra/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-gov-${ENV_KUBERNETES}-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mern-gov-${ENV_KUBERNETES}-backend-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mern-gov-${ENV_KUBERNETES}-backend-app
    spec:
      containers:
      - image: ghcr.io/galpenergia/mern-backend:latest
        imagePullPolicy: Always
        name: mern-gov-${ENV_KUBERNETES}-backend-app
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: github-pat-dockerconfig
---
apiVersion: v1
kind: Service
metadata:
  name: mern-gov-${ENV_KUBERNETES}-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: mern-gov-${ENV_KUBERNETES}-backend-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-gov-${ENV_KUBERNETES}-backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mern-gov-${ENV_KUBERNETES}-backend
              port:
                number: 80
